--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,13 +31,17 @@ android {
 
     buildFeatures {
         compose true
+        viewBinding = true
     }
 
     kotlinOptions {
         jvmTarget = '1.8'
     }
 
-
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.0.3'
+        kotlinCompilerVersion '1.5.30'
+    }
 }
 
 dependencies {
@@ -51,10 +55,11 @@ dependencies {
 
     // compose
     implementation "androidx.compose.ui:ui:1.0.5"
-    implementation 'androidx.activity:activity-compose:1.4.0'
-    implementation "androidx.compose.foundation:foundation:1.0.5"
+//    implementation 'androidx.activity:activity-compose:1.4.0'
+//    implementation "androidx.compose.foundation:foundation:1.0.5"
     implementation "androidx.compose.material:material:1.0.5"
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0'
+    implementation "androidx.compose.runtime:runtime-livedata:1.0.5"
+    implementation "io.coil-kt:coil-compose:1.4.0"
 
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3'
