--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.enyason.edvoraapp">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name=".EdvoraApp"
@@ -9,7 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.EdvoraApp">
+        android:theme="@style/Theme.EdvoraApp"
+        tools:ignore="AllowBackup">
         <activity
             android:name=".presentation.MainActivity"
             android:exported="true">
