--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,9 +90,11 @@ dependencies {
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
 
     testImplementation "androidx.arch.core:core-testing:2.1.0"
-    testImplementation 'org.mockito:mockito-core:3.9.0'
-    testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
+//    testImplementation 'org.mockito:mockito-core:3.9.0'
+//    testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
     testImplementation 'com.squareup.retrofit2:retrofit-mock:2.3.0'
+    implementation "io.mockk:mockk:1.11.0"
+
 
     androidTestImplementation 'androidx.androidTest.ext:junit:1.1.2'
     androidTestImplementation 'androidx.androidTest.espresso:espresso-core:3.3.0'
