--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,7 +93,7 @@ dependencies {
 //    testImplementation 'org.mockito:mockito-core:3.9.0'
 //    testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
     testImplementation 'com.squareup.retrofit2:retrofit-mock:2.3.0'
-    implementation "io.mockk:mockk:1.11.0"
+    testImplementation "io.mockk:mockk:1.11.0"
 
 
     androidTestImplementation 'androidx.androidTest.ext:junit:1.1.2'
